# ellipsoid

./: .gitignore  Cargo.toml  README.md
examples/pong/: Cargo.toml  index.html
examples/pong/src/: lib.rs  main.rs
examples/simple_app_readme/: Cargo.toml
examples/simple_app_readme/src/: lib.rs  main.rs
src/: graphics.rs  lib.rs  shader.wgsl
src/graphics/: color.rs  gtransform.rs  shape.rs  texture.rs
