[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
ellipsoid = {"path" = "../../"}
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"

[lib]
crate-type = ["cdylib", "rlib"]